--- a/phpbb3.lang_turkish.guide.html
+++ b/phpbb3.lang_turkish.guide.html
@@ -166,7 +166,7 @@ function selectCode(a) {
 				<tr>
 					<td style="padding-left:10px;"><strong>Sürüm</strong></td>
 					<td>&nbsp;:&nbsp;</td>
-					<td>0.0.74.a &nbsp; 04 Eylül 2009 &nbsp; ( phpBB 3.0.5 ) &nbsp; Unicode (UTF-8)</td>
+					<td>0.0.75.a &nbsp; 12 Eylül 2009 &nbsp; ( phpBB 3.0.6-RC1 ) &nbsp; Unicode (UTF-8)</td>
 				</tr>
 				<tr>
 					<td style="padding-left:10px;" valign="top"><strong>Tercüme & Telif</strong></td>
