--- a/phpbb3.lang_turkish.guide.html
+++ b/phpbb3.lang_turkish.guide.html
@@ -10,111 +10,28 @@
 <title>phpBB Türkiye - phpBB3 Türkçe Dil Dosyası - yükleme ve kullanım kılavuzu</title>
 <style type="text/css" media="screen">
 <!--
-* html table, * html td, * html { font-size: 100%; }
-html { font-size: 100%; height: 100%; }
-body {
-	color		: #828282;
-	font		: normal 12px Verdana, Helvetica, Arial, sans-serif;
-	color		: #222;
-	background	: #dbd7d1;
-	margin		: 0;
-	line-height : 1.6em
-}
-#wrapper {
-	width		: 770px;
-	margin		: 0 auto;
-	background	: #fff;
-	padding		: 15px;
-	border-left	: 1px solid #6e7a83;
-	border-right: 1px solid #6e7a83;
-}
-h1 {
-	font-size: 20px;
-	background-color: #828d97;
-	border-bottom	: 1px solid #dbd7d1;
-	color			: #fff;
-	padding			: 24px;
-	margin			: -15px -15px 0 -15px;
-}
-h2 { color: #d21a4e; font-size: 15px;}
-h3 {
-	font-size		: 14px;
-	background-color: #e1e3e7;
-	color			: #666;
-	padding			: 5px 15px;
-	margin			: 0;
-	border-top		: 1px solid #ffffff; 
-	border-bottom	: 2px solid #8c99a3;
-}
-h4, p { padding-left: 10px; font-size: 12px;}
-p,ul,li { line-height:1.4em; }
-.note {
-	background	: #ebeadd;
-	margin		: 20px 0;
-	padding		: 10px;
-	border-top	: 2px solid #8c99a3;
-}
-a:link, a:active, a:visited { 
-	color				: #368AD2;
-	border-bottom-color	: #368ad2;
-}
-a:hover { 
-	background-color: #ecf3f7;
-	color			: #0d4473;
-}
-small, .small {
-	font-size	: 10px; 
-	font-weight	: bold;
-	font-family	: Arial, Helvetica, sans-serif;
-}
-.dir { color: #006400; }
-.file { color: #bc280e; }
-.greentext {
-	color		: #287302; 
-	background	: inherit;
-}
-.redtext {
-	color		: #d21a4e;
-	background	: inherit;
-}
-hr {
-	border				: 0px none;
-	background-color	: #6e7a83;
-	height				: 1px;
-/*	margin				: -15px -15px 0 -15px;*/
-}
+* html table, * html td, * html {font-size: 100%;}
+html {font-size:100%;height: 100%;}
+body {color:#828282;font:normal 12px/1.6em Verdana, Helvetica, Arial, sans-serif;color:#222;background:#dbd7d1;margin:0;}
+#wrapper {width:770px;margin:0 auto;background:#fff;padding:15px;border-left:1px solid #6e7a83;border-right:1px solid #6e7a83;}
+h1 {font-size:20px;background-color:#828d97;border-bottom:1px solid #dbd7d1;color:#fff;padding:24px;margin:-15px -15px 0 -15px;}
+h2 {color:#d21a4e;font-size:15px;}
+h3 {font-size:14px;background-color:#e1e3e7;color:#666;padding:5px 15px;margin:0;border-top:1px solid #ffffff;border-bottom:2px solid #8c99a3;}
+h4, p {padding-left:10px;font-size:12px;}
+p,ul,li {line-height:1.4em;}
+.note {background:#ebeadd;margin:20px 0;padding:10px;border-top:2px solid #8c99a3;}
+a:link, a:active, a:visited {color:#368AD2;border-bottom-color:#368ad2;}
+a:hover {background-color:#ecf3f7;color:#0d4473;}
+small, .small {font-size:10px;font-weight:bold;font-family:Arial, Helvetica, sans-serif;}
+.dir {color:#006400;}
+.file {color:#bc280e;}
+.greentext {color:#287302;background:inherit;}
+.redtext {color:#d21a4e;background:inherit;}
+hr {border:0px none;background-color:#6e7a83;height:1px;}
 /* Code block */
-dl.codebox {
-	padding			: 3px;
-	background-color: #fff;
-	border			: 1px solid #d8d8d8;
-	font-size		: 1em;
-	background-color: #fff;
-	border-color	: #c9d2d8;
-	margin			: 0 0 0 10px;
-}
-dl.codebox dt {
-	text-transform		: uppercase;
-	border-bottom		: 1px solid #ccc;
-	margin-bottom		: 3px;
-	padding				: 0 0 0 5px;
-	font-size			: 0.8em;
-	font-weight			: bold;
-	display				: block;
-	border-bottom-color	: #ccc;
-}
-dl.codebox code {
-	overflow	: auto;
-	display		: block;
-	height		: auto;
-	max-height	: 200px;
-	white-space	: normal;
-	padding		: 2px 0 2px 0;
-	font		: 0.9em Monaco, "Andale Mono","Courier New", Courier, mono;
-	line-height	: 1.3em;
-	margin		: 2px 0 0 -36px;
-	color		: #2e8b57;
-}
+dl.codebox {padding:3px;background-color:#fff;border:1px solid #d8d8d8;font-size:1em;background-color:#fff;border-color:#c9d2d8;margin:0 0 0 10px;}
+dl.codebox dt {text-transform:uppercase;border-bottom:1px solid #ccc;margin-bottom:3px;padding:0 0 0 5px;font-size:0.8em;font-weight:bold;display:block;border-bottom-color:#ccc;}
+dl.codebox code {overflow:auto;display:block;height:auto;max-height:200px;white-space:normal;padding:2px 0 2px 0;font:0.9em Monaco, "Andale Mono","Courier New", Courier, mono;line-height:1.3em;margin:2px 0 0 -36px;color:#2e8b57;}
 -->
 </style>
 <script type="text/javascript">
@@ -166,7 +83,7 @@ function selectCode(a) {
 				<tr>
 					<td style="padding-left:10px;"><strong>Sürüm</strong></td>
 					<td>&nbsp;:&nbsp;</td>
-					<td>0.0.79.a &nbsp; 13 Ekim 2009 &nbsp; ( phpBB 3.0.6-RC3 ) &nbsp; Unicode (UTF-8)</td>
+					<td>0.0.80.a &nbsp; 02 Kasım 2009 &nbsp; ( phpBB 3.0.6-RC4 ) &nbsp; Unicode (UTF-8)</td>
 				</tr>
 				<tr>
 					<td style="padding-left:10px;" valign="top"><strong>Tercüme & Telif</strong></td>
@@ -377,6 +294,7 @@ function selectCode(a) {
 			<p>Sürüm geçmişinin aşırı yer kaplamaması için ara sürüm ve bazı SVN sürümleri atlanmış, sadece son kullanıcıya sunulan ana dağıtımlara yer verilmiştir.</p> 
 			<p>
 				<ul type="square">
+					<li><strong>v. 0.0.80.a</strong> &nbsp;&nbsp;( 02.11.2009 ) - <strong>phpBB 3.0.6-RC4</strong> güncellemesi</li>
 					<li><strong>v. 0.0.79.a</strong> &nbsp;&nbsp;( 13.10.2009 ) - <strong>phpBB 3.0.6-RC3</strong> güncellemesi</li>
 					<li><strong>v. 0.0.77.a</strong> &nbsp;&nbsp;( 26.09.2009 ) - <strong>phpBB 3.0.6-RC2</strong> güncellemesi</li>
 					<li><strong>v. 0.0.76.a</strong> &nbsp;&nbsp;( 12.09.2009 ) - <strong>phpBB 3.0.6-RC1</strong> güncellemesi</li>
@@ -438,7 +356,6 @@ function selectCode(a) {
 			</div>
 
 		</div>
-
 
 	</td>
 </tr>
