--- a/phpbb3.lang_turkish.guide.html
+++ b/phpbb3.lang_turkish.guide.html
@@ -83,7 +83,7 @@ function selectCode(a) {
 				<tr>
 					<td style="padding-left:10px;"><strong>Sürüm</strong></td>
 					<td>&nbsp;:&nbsp;</td>
-					<td>1.0.2 &nbsp; 24 Şubat 2010 &nbsp; ( phpBB 3.0.7-RC2 ) &nbsp; Unicode (UTF-8)</td>
+					<td>1.0.3 &nbsp; 01 Mart 2010 &nbsp; ( phpBB 3.0.7 ) &nbsp; Unicode (UTF-8)</td>
 				</tr>
 				<tr>
 					<td style="padding-left:10px;" valign="top"><strong>Tercüme & Telif</strong></td>
@@ -294,6 +294,7 @@ function selectCode(a) {
 			<p>Sürüm geçmişinin aşırı yer kaplamaması için ara sürüm ve bazı SVN sürümleri atlanmış, sadece son kullanıcıya sunulan ana dağıtımlara yer verilmiştir.</p> 
 			<p>
 				<ul type="square">
+					<li><strong>v. 1.0.3</strong> &nbsp;&nbsp;( 01.03.2010 ) - <strong>phpBB 3.0.7</strong> güncellemesi</li>
 					<li><strong>v. 1.0.2</strong> &nbsp;&nbsp;( 24.02.2010 ) - <strong>phpBB 3.0.7-RC2</strong> güncellemesi</li>
 					<li><strong>v. 1.0.1</strong> &nbsp;&nbsp;( 02.02.2010 ) - <strong>phpBB 3.0.7-RC1</strong> güncellemesi</li>
 					<li><strong>v. 1.0.0</strong> &nbsp;&nbsp;( 18.11.2009 ) - <strong>phpBB 3.0.6</strong> güncellemesi</li>
