--- a/phpbb3.lang_turkish.guide.html
+++ b/phpbb3.lang_turkish.guide.html
@@ -291,10 +291,10 @@ function selectCode(a) {
 			
 			<!-- [+] sürüm geçmişi //-->
 			<h3>Sürüm geçmişi</h3>
-			<p>Sürüm geçmişinin aşırı yer kaplamaması için ara sürüm ve bazı SVN sürümleri atlanmış, sadece son kullanıcıya sunulan ana dağıtımlara yer verilmiştir.</p> 
+			<p>Sürüm geçmişinin aşırı yer kaplamaması için bazı ara sürümler ve atlanmış, sadece son kullanıcıya sunulan ana dağıtımlara yer verilmiştir.</p> 
 			<p>
 				<ul type="square">
-					<li><strong>v. 1.0.4</strong> &nbsp;&nbsp;( 06.03.2010 ) - <strong>phpBB 3.0.7-PL1</strong> güncellemesi, 3.0.7 ile far yoktur</li>
+					<li><strong>v. 1.0.4</strong> &nbsp;&nbsp;( 06.03.2010 ) - <strong>phpBB 3.0.7-PL1</strong> güncellemesi, 3.0.7 ile fark yok</li>
 					<li><strong>v. 1.0.3</strong> &nbsp;&nbsp;( 01.03.2010 ) - <strong>phpBB 3.0.7</strong> güncellemesi</li>
 					<li><strong>v. 1.0.2</strong> &nbsp;&nbsp;( 24.02.2010 ) - <strong>phpBB 3.0.7-RC2</strong> güncellemesi</li>
 					<li><strong>v. 1.0.1</strong> &nbsp;&nbsp;( 02.02.2010 ) - <strong>phpBB 3.0.7-RC1</strong> güncellemesi</li>
