sürüm numarısı değişti

--- a/phpbb3.lang_turkish.guide.html
+++ b/phpbb3.lang_turkish.guide.html
@@ -22,7 +22,7 @@ p,ul,li {line-height:1.4em;}
 .note {background:#ebeadd;margin:20px 0;padding:10px;border-top:2px solid #8c99a3;}
 a:link, a:active, a:visited {color:#368AD2;border-bottom-color:#368ad2;}
 a:hover {background-color:#ecf3f7;color:#0d4473;}
-small, .small {font-size:10px;font-weight:bold;font-family:Arial, Helvetica, sans-serif;}
+small, .small {font-size:10px;font-family:Arial, Helvetica, sans-serif;}
 .dir {color:#006400;}
 .file {color:#bc280e;}
 .greentext {color:#287302;background:inherit;}
@@ -83,10 +83,10 @@ function selectCode(a) {
 				<tr>
 					<td style="padding-left:10px;"><strong>Sürüm</strong></td>
 					<td>&nbsp;:&nbsp;</td>
-					<td>1.0.5 &nbsp; 21 Kasım 2010 &nbsp; ( phpBB 3.0.8 ) &nbsp; Unicode (UTF-8)</td>
+					<td>1.0.6 &nbsp; 27 Mayıs 2011 &nbsp; ( phpBB 3.0.8 ) &nbsp; Unicode (UTF-8)</td>
 				</tr>
 				<tr>
-					<td style="padding-left:10px;" valign="top"><strong>Tercüme & Telif</strong></td>
+					<td style="padding-left:10px;" valign="top"><strong>Tercüme &amp; Telif</strong></td>
 					<td valign="top">&nbsp;:&nbsp;</td>
 					<td>© <a href="http://www.phpbbturkiye.net" title="phpBB3 Türkçe destek ve geliştirme sitesi" target="_blank">phpBB Türkiye</a> - www.phpbbturkiye.net -  
 					© <a href="http://www.canversoft.net" title="Canver Software Internet ve yazılım hizmetleri" target="_blank">Canver Software</a> - www.canversoft.net</td>
@@ -172,7 +172,7 @@ function selectCode(a) {
 			<ul type="square">
 				<li>E-posta yolu ile izin verilmediği sürece, gelişmiş phpBB sistemlerinde telif bilgilerimize müdahale edemezsiniz.</li>
 				<br />
-				<li>Bu kılavuzu phpBB sisteminiz ile beraber dağıtarak, kullanıcıları "<strong>kullanım & bulundurma koşulları</strong>"ndan haberdar etmelisiniz.</li>
+				<li>Bu kılavuzu phpBB sisteminiz ile beraber dağıtarak, kullanıcıları "<strong>kullanım &amp; bulundurma koşulları</strong>"ndan haberdar etmelisiniz.</li>
 			</ul>
 			</p>
 			<!-- [-] kullanım & bulundurma koşulları //-->
@@ -242,7 +242,7 @@ function selectCode(a) {
 			<!-- =============================================================================================== -->
 
 			<!-- [+] tercüme grubu & katkıda bulunanlar //-->
-			<h3>Tercüme grubu & katkıda bulunanlar</h3>
+			<h3>Tercüme grubu &amp; katkıda bulunanlar</h3>
 
 			<table border="0">
 			<tr>
@@ -250,16 +250,16 @@ function selectCode(a) {
 					<h4>İlk tercüme grubu (phpBB 3.0.0 Gold)</h4>
 					<p>
 						<ul type="square" class="ul2">
-							<li>Bülent Küçükaslan - <a href="http://www.engelliler.biz" target="_blank"><small>engelliler.biz platformu</small></a></li>
-							<li>Dinçer Aydiç - <a href="http://www.iolpliler.net" target="_blank"><small>iölp egitim ve paylaşım</small></a></li>
-							<li>Erdem Arslan - <a href="http://www.dostlukbirbaska.com" target="_blank"><small>dostluk bir başka</small></a></li>
-							<li>Erdoğan Şimşek - <a href="http://www.eglenceyeri.net" target="_blank"><small>eğlence yeri</small></a></li>
-							<li>Hamza Apaydın - <a href="#" target="_blank"><small>#</small></a></li>
-							<li>Sabri Ünal - <a href="http://www.yakusha.net" target="_blank"><small>Yakusha</small></a></li>
-							<li>Selman Solak - <a href="http://www.buzlas.net" target="_blank"><small>BuzLaş</small></a></li>
-							<li>Sevdin Filiz - <a href="http://www.canversoft.net" target="_blank"><small>Canver Software</small></a></li>
-							<li>Utku Filiz - <a href="http://www.bizdenbiri.com" target="_blank"><small>bizdenbiri olmak ister misin?</small></a></li>
-							<li>Zafer Sarışahin - <a href="http://www.simuzer.com" target="_blank"><small>sımsıcak bir sevgi edebiyatı</small></a></li>
+							<li>Bülent Küçükaslan</li>
+							<li>Dinçer Aydiç</li>
+							<li>Erdem Arslan</li>
+							<li>Erdoğan Şimşek</li>
+							<li>Hamza Apaydın</li>
+							<li>Sabri Ünal</li>
+							<li>Selman Solak</li>
+							<li>Sevdin Filiz</li>
+							<li>Utku Filiz</a></li>
+							<li>Zafer Sarışahin</li>
 						</ul>
 					</p>
 				</td>
@@ -268,9 +268,9 @@ function selectCode(a) {
 					<h4>Katkıda bulunanlar</h4>
 					<p>
 						<ul type="square" class="ul2">
-							<li>Emrah Bayıldıran<small> / İngilizce Yeminli Tercüman - <a href="http://www.tercumen.net/" target="_blank">Tercümanlık Hizmetleri</a></small></li>
-							<li>Kaan Başkal - <a href="http://www.melankoliyiz.biz" target="_blank"><small>Melankoli Forumu</small></a></li>
-							<li>Hilmi Erdem Keren - <a href="http://www.why-islam.net" target="_blank"><small>Why-Islam</small></a></li>
+							<li>Emrah Bayıldıran<small> - İngilizce Yeminli Tercüman</small></li>
+							<li>Kaan Başkal</li>
+							<li>Hilmi Erdem Keren</li>
 						</ul>
 					</p>
 					<br />
@@ -278,7 +278,7 @@ function selectCode(a) {
 					<h4>Süreklilik, yeni sürüm güncellemeleri</h4>
 					<p>
 						<ul type="square" class="ul2">
-							<li>Sevdin Filiz - <a href="http://www.canversoft.net" target="_blank"><small>Canver Software</small></a></li>
+							<li>Sevdin Filiz</li>
 						</ul>
 					</p>
 					
