phpBB 3.0.9.RC1 güncellemeleri

--- a/phpbb3.lang_turkish.guide.html
+++ b/phpbb3.lang_turkish.guide.html
@@ -1,4 +1,3 @@
-<!-- @version $Id$ //-->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="tr" xml:lang="tr">
 <head>
@@ -9,30 +8,7 @@
 <meta name="keywords" content="phpbb, phpbb3, türkçe, dil dosyası, phpBB3 Türkçe Dil Dosyası, phpBB3 Türkçe Dil Paketi, phpBB Türkiye" />
 <title>phpBB Türkiye - phpBB3 Türkçe Dil Dosyası - yükleme ve kullanım kılavuzu</title>
 <style type="text/css" media="screen">
-<!--
-* html table, * html td, * html {font-size: 100%;}
-html {font-size:100%;height: 100%;}
-body {color:#828282;font:normal 12px/1.6em Verdana, Helvetica, Arial, sans-serif;color:#222;background:#dbd7d1;margin:0;}
-#wrapper {width:770px;margin:0 auto;background:#fff;padding:15px;border-left:1px solid #6e7a83;border-right:1px solid #6e7a83;}
-h1 {font-size:20px;background-color:#828d97;border-bottom:1px solid #dbd7d1;color:#fff;padding:24px;margin:-15px -15px 0 -15px;}
-h2 {color:#d21a4e;font-size:15px;}
-h3 {font-size:14px;background-color:#e1e3e7;color:#666;padding:5px 15px;margin:0;border-top:1px solid #ffffff;border-bottom:2px solid #8c99a3;}
-h4, p {padding-left:10px;font-size:12px;}
-p,ul,li {line-height:1.4em;}
-.note {background:#ebeadd;margin:20px 0;padding:10px;border-top:2px solid #8c99a3;}
-a:link, a:active, a:visited {color:#368AD2;border-bottom-color:#368ad2;}
-a:hover {background-color:#ecf3f7;color:#0d4473;}
-small, .small {font-size:10px;font-family:Arial, Helvetica, sans-serif;}
-.dir {color:#006400;}
-.file {color:#bc280e;}
-.greentext {color:#287302;background:inherit;}
-.redtext {color:#d21a4e;background:inherit;}
-hr {border:0px none;background-color:#6e7a83;height:1px;}
-/* Code block */
-dl.codebox {padding:3px;background-color:#fff;border:1px solid #d8d8d8;font-size:1em;background-color:#fff;border-color:#c9d2d8;margin:0 0 0 10px;}
-dl.codebox dt {text-transform:uppercase;border-bottom:1px solid #ccc;margin-bottom:3px;padding:0 0 0 5px;font-size:0.8em;font-weight:bold;display:block;border-bottom-color:#ccc;}
-dl.codebox code {overflow:auto;display:block;height:auto;max-height:200px;white-space:normal;padding:2px 0 2px 0;font:0.9em Monaco, "Andale Mono","Courier New", Courier, mono;line-height:1.3em;margin:2px 0 0 -36px;color:#2e8b57;}
--->
+* html table,* html td,* html{font-size:100%}html{font-size:100%;height:100%}body{font:normal 12px/1.6em Verdana, Helvetica, Arial, sans-serif;color:#222;background:#dbd7d1;margin:0}#wrapper{width:770px;background:#fff;border-left:1px solid #6e7a83;border-right:1px solid #6e7a83;margin:0 auto;padding:15px}h1{font-size:20px;background-color:#828d97;border-bottom:1px solid #dbd7d1;color:#fff;margin:-15px -15px 0;padding:24px}h2{color:#d21a4e;font-size:15px}h3{font-size:14px;background-color:#e1e3e7;color:#666;border-top:1px solid #fff;border-bottom:2px solid #8c99a3;margin:0;padding:5px 15px}h4,p{padding-left:10px;font-size:12px}p,ul,li{line-height:1.4em}.note{background:#ebeadd;border-top:2px solid #8c99a3;margin:20px 0;padding:10px}a:link,a:active,a:visited{color:#368AD2;border-bottom-color:#368ad2}a:hover{background-color:#ecf3f7;color:#0d4473}small,.small{font-size:10px;font-family:Arial, Helvetica, sans-serif}.dir{color:#006400}.file{color:#bc280e}.greentext{color:#287302;background:inherit}.redtext{color:#d21a4e;background:inherit}hr{border:0 none;background-color:#6e7a83;height:1px}dl.codebox{border:1px solid #d8d8d8;font-size:1em;background-color:#fff;border-color:#c9d2d8;margin:0 0 0 10px;padding:3px}dl.codebox dt{text-transform:uppercase;border-bottom:1px solid #ccc;margin-bottom:3px;font-size:.8em;font-weight:700;display:block;border-bottom-color:#ccc;padding:0 0 0 5px}dl.codebox code{overflow:auto;display:block;height:auto;max-height:200px;white-space:normal;font:.9em Monaco, "Andale Mono","Courier New", Courier, mono;line-height:1.3em;color:#2e8b57;margin:2px 0 0 -36px;padding:2px 0}
 </style>
 <script type="text/javascript">
 // <![CDATA[
@@ -59,7 +35,6 @@ function selectCode(a) {
 <table align="center">
 <tr>
 	<td>
-
 		<div id="wrapper">
 			<center>
 				<h1>phpBB3 Türkçe Dil Dosyası</h1>
@@ -83,13 +58,13 @@ function selectCode(a) {
 				<tr>
 					<td style="padding-left:10px;"><strong>Sürüm</strong></td>
 					<td>&nbsp;:&nbsp;</td>
-					<td>1.0.6 &nbsp; 27 Mayıs 2011 &nbsp; ( phpBB 3.0.8 ) &nbsp; Unicode (UTF-8)</td>
+					<td>1.0.6 &nbsp; 28 Haziran 2011 &nbsp; ( phpBB 3.0.9.RC1 ) &nbsp; Unicode (UTF-8)</td>
 				</tr>
 				<tr>
 					<td style="padding-left:10px;" valign="top"><strong>Tercüme &amp; Telif</strong></td>
 					<td valign="top">&nbsp;:&nbsp;</td>
-					<td>© <a href="http://www.phpbbturkiye.net" title="phpBB3 Türkçe destek ve geliştirme sitesi" target="_blank">phpBB Türkiye</a> - www.phpbbturkiye.net -  
-					© <a href="http://www.canversoft.net" title="Canver Software Internet ve yazılım hizmetleri" target="_blank">Canver Software</a> - www.canversoft.net</td>
+					<td>&copy; <a href="http://www.phpbbturkiye.net" title="phpBB3 Türkçe destek ve geliştirme sitesi" target="_blank">phpBB Türkiye</a> - www.phpbbturkiye.net -  
+					&copy; <a href="http://www.canversoft.net" title="Canver Software Internet ve yazılım hizmetleri" target="_blank">Canver Software</a> - www.canversoft.net</td>
 				</tr>
 				<tr>
 					<td style="padding-left:10px;"><strong>Lisans</strong></td>
@@ -294,41 +269,42 @@ function selectCode(a) {
 			<p>Sürüm geçmişinin aşırı yer kaplamaması için bazı ara sürümler ve atlanmış, sadece son kullanıcıya sunulan ana dağıtımlara yer verilmiştir.</p> 
 			<p>
 				<ul type="square">
-					<li><strong>v. 1.0.5</strong> &nbsp;&nbsp;( 21.11.2010 ) - <strong>phpBB 3.0.8</strong> güncellemesi</li>
-					<li><strong>v. 1.0.4</strong> &nbsp;&nbsp;( 06.03.2010 ) - <strong>phpBB 3.0.7-PL1</strong> güncellemesi, 3.0.7 ile fark yok</li>
-					<li><strong>v. 1.0.3</strong> &nbsp;&nbsp;( 01.03.2010 ) - <strong>phpBB 3.0.7</strong> güncellemesi</li>
-					<li><strong>v. 1.0.2</strong> &nbsp;&nbsp;( 24.02.2010 ) - <strong>phpBB 3.0.7-RC2</strong> güncellemesi</li>
-					<li><strong>v. 1.0.1</strong> &nbsp;&nbsp;( 02.02.2010 ) - <strong>phpBB 3.0.7-RC1</strong> güncellemesi</li>
-					<li><strong>v. 1.0.0</strong> &nbsp;&nbsp;( 18.11.2009 ) - <strong>phpBB 3.0.6</strong> güncellemesi</li>
-					<li><strong>v. 0.0.80.a</strong> &nbsp;&nbsp;( 02.11.2009 ) - <strong>phpBB 3.0.6-RC4</strong> güncellemesi</li>
-					<li><strong>v. 0.0.79.a</strong> &nbsp;&nbsp;( 13.10.2009 ) - <strong>phpBB 3.0.6-RC3</strong> güncellemesi</li>
-					<li><strong>v. 0.0.77.a</strong> &nbsp;&nbsp;( 26.09.2009 ) - <strong>phpBB 3.0.6-RC2</strong> güncellemesi</li>
-					<li><strong>v. 0.0.76.a</strong> &nbsp;&nbsp;( 12.09.2009 ) - <strong>phpBB 3.0.6-RC1</strong> güncellemesi</li>
-					<li><strong>v. 0.0.73.a</strong> &nbsp;&nbsp;( 01.06.2009 ) - <strong>phpBB 3.0.5</strong> güncellemesi (3.0.5-RC1 ile aynı)</li>
-					<li><strong>v. 0.0.72.a</strong> &nbsp;&nbsp;( 06.05.2009 ) - <strong>phpBB 3.0.5-RC1</strong> güncellemesi</li>
-					<li><strong>v. 0.0.71.a</strong> &nbsp;&nbsp;( 13.12.2008 ) - <strong>phpBB 3.0.4</strong> güncellemesi (3.0.4 RC1 ile aynı)</li>
-					<li><strong>v. 0.0.70.a</strong> &nbsp;&nbsp;( 10.12.2008 ) - <strong>phpBB 3.0.4-RC1</strong> güncellemesi</li>
-					<li><strong>v. 0.0.68.a</strong> &nbsp;&nbsp;( 12.11.2008 ) - <strong>phpBB 3.0.3</strong> güncellemesi</li>
-					<li><strong>v. 0.0.66.a</strong> &nbsp;&nbsp;( 03.11.2008 ) - <strong>phpBB 3.0.3-RC1</strong> güncellemesi</li>
-					<li><strong>v. 0.0.65.a</strong> &nbsp;&nbsp;( 03.11.2008 ) - <strong>phpBB 3.0.2</strong>, düzeltme ve iyileştirmeler</li>
-					<li><strong>v. 0.0.64.a</strong> &nbsp;&nbsp;( 28.08.2008 ) - <strong>phpBB 3.0.2</strong>, düzeltme ve iyileştirmeler</li>
-					<li><strong>v. 0.0.63.a</strong> &nbsp;&nbsp;( 11.07.2008 ) - <strong>phpBB 3.0.2</strong> güncellemesi</li>
-					<li><strong>v. 0.0.59.a</strong> &nbsp;&nbsp;( 07.04.2008 ) - <strong>phpBB 3.0.1</strong> güncellemesi</li>
-					<li><strong>v. 0.0.58.a</strong> &nbsp;&nbsp;( 26.03.2008 ) - <strong>phpBB 3.0.1-RC1</strong> güncellemesi</li>
-					<li><strong>v. 0.0.56.a</strong> &nbsp;&nbsp;( 13.12.2007 ) - <strong>phpBB 3.0.0</strong> güncellemesi</li>
-					<li><strong>v. 0.0.54.a</strong> &nbsp;&nbsp;( 01.11.2007 ) - <strong>phpBB 3.0-RC8</strong> güncellemesi</li>
-					<li><strong>v. 0.0.51.a</strong> &nbsp;&nbsp;( 15.09.2007 ) - <strong>phpBB 3.0-RC7</strong> güncellemesi</li>
-					<li><strong>v. 0.0.50.a</strong> &nbsp;&nbsp;( 13.09.2007 ) - <strong>phpBB 3.0-RC6</strong> güncellemesi</li>
-					<li><strong>v. 0.0.46.a</strong> &nbsp;&nbsp;( 28.08.2007 ) - <strong>phpBB 3.0-RC5</strong> güncellemesi</li>
-					<li><strong>v. 0.0.44.a</strong> &nbsp;&nbsp;( 28.07.2007 ) - <strong>phpBB 3.0-RC4</strong> güncellemesi</li>
-					<li><strong>v. 0.0.41.a</strong> &nbsp;&nbsp;( 08.07.2007 ) - <strong>phpBB 3.0-RC3</strong> güncellemesi</li>
-					<li><strong>v. 0.0.40.a</strong> &nbsp;&nbsp;( 25.06.2007 ) - <strong>phpBB 3.0-RC2</strong> güncellemes</li>
-					<li><strong>v. 0.0.38.a</strong> &nbsp;&nbsp;( 26.04.2007 ) - <strong>phpBB 3.0-RC1</strong> güncellemesi</li>
-					<li><strong>v. 0.0.23.a</strong> &nbsp;&nbsp;( 30.01.2006 ) - <strong>phpBB 3.0-B5</strong> güncellemesi</li>
-					<li><strong>v. 0.0.16.a</strong> &nbsp;&nbsp;( 29.11.2006 ) - <strong>phpBB 3.0-B4</strong> güncellemesi</li>
-					<li><strong>v. 0.0.14.a</strong> &nbsp;&nbsp;( 12.11.2006 ) - <strong>phpBB 3.0-B3</strong> güncellemesi</li>
-					<li><strong>v. 0.0.1.a</strong> &nbsp;&nbsp;&nbsp;&nbsp;( 21.09.2006 ) - <strong>phpBB 3.0-B2</strong> güncellemesi</li>
-					<li><strong>v. 0.0.0.a</strong> &nbsp;&nbsp;&nbsp;&nbsp;( 19.06.2006 ) - <strong>phpBB 3.0-B1</strong> güncellemesi</li>
+					<li><strong>1.0.6</strong> &nbsp; &nbsp; ( 28.16.2011 ) - <strong>phpBB 3.0.9.RC1</strong> güncellemesi</li>
+					<li><strong>1.0.5</strong> &nbsp; &nbsp; ( 21.11.2010 ) - <strong>phpBB 3.0.8</strong> güncellemesi</li>
+					<li><strong>1.0.4</strong> &nbsp; &nbsp; ( 06.03.2010 ) - <strong>phpBB 3.0.7-PL1</strong> güncellemesi, 3.0.7 ile fark yok</li>
+					<li><strong>1.0.3</strong> &nbsp; &nbsp; ( 01.03.2010 ) - <strong>phpBB 3.0.7</strong> güncellemesi</li>
+					<li><strong>1.0.2</strong> &nbsp; &nbsp; ( 24.02.2010 ) - <strong>phpBB 3.0.7-RC2</strong> güncellemesi</li>
+					<li><strong>1.0.1</strong> &nbsp; &nbsp; ( 02.02.2010 ) - <strong>phpBB 3.0.7-RC1</strong> güncellemesi</li>
+					<li><strong>1.0.0</strong> &nbsp; &nbsp; ( 18.11.2009 ) - <strong>phpBB 3.0.6</strong> güncellemesi</li>
+					<li><strong>0.0.80</strong> &nbsp; ( 02.11.2009 ) - <strong>phpBB 3.0.6-RC4</strong> güncellemesi</li>
+					<li><strong>0.0.79</strong> &nbsp; ( 13.10.2009 ) - <strong>phpBB 3.0.6-RC3</strong> güncellemesi</li>
+					<li><strong>0.0.77</strong> &nbsp; ( 26.09.2009 ) - <strong>phpBB 3.0.6-RC2</strong> güncellemesi</li>
+					<li><strong>0.0.76</strong> &nbsp; ( 12.09.2009 ) - <strong>phpBB 3.0.6-RC1</strong> güncellemesi</li>
+					<li><strong>0.0.73</strong> &nbsp; ( 01.06.2009 ) - <strong>phpBB 3.0.5</strong> güncellemesi (3.0.5-RC1 ile aynı)</li>
+					<li><strong>0.0.72</strong> &nbsp; ( 06.05.2009 ) - <strong>phpBB 3.0.5-RC1</strong> güncellemesi</li>
+					<li><strong>0.0.71</strong> &nbsp; ( 13.12.2008 ) - <strong>phpBB 3.0.4</strong> güncellemesi (3.0.4 RC1 ile aynı)</li>
+					<li><strong>0.0.70</strong> &nbsp; ( 10.12.2008 ) - <strong>phpBB 3.0.4-RC1</strong> güncellemesi</li>
+					<li><strong>0.0.68</strong> &nbsp; ( 12.11.2008 ) - <strong>phpBB 3.0.3</strong> güncellemesi</li>
+					<li><strong>0.0.66</strong> &nbsp; ( 03.11.2008 ) - <strong>phpBB 3.0.3-RC1</strong> güncellemesi</li>
+					<li><strong>0.0.65</strong> &nbsp; ( 03.11.2008 ) - <strong>phpBB 3.0.2</strong>, düzeltme ve iyileştirmeler</li>
+					<li><strong>0.0.64</strong> &nbsp; ( 28.08.2008 ) - <strong>phpBB 3.0.2</strong>, düzeltme ve iyileştirmeler</li>
+					<li><strong>0.0.63</strong> &nbsp; ( 11.07.2008 ) - <strong>phpBB 3.0.2</strong> güncellemesi</li>
+					<li><strong>0.0.59</strong> &nbsp; ( 07.04.2008 ) - <strong>phpBB 3.0.1</strong> güncellemesi</li>
+					<li><strong>0.0.58</strong> &nbsp; ( 26.03.2008 ) - <strong>phpBB 3.0.1-RC1</strong> güncellemesi</li>
+					<li><strong>0.0.56</strong> &nbsp; ( 13.12.2007 ) - <strong>phpBB 3.0.0</strong> güncellemesi</li>
+					<li><strong>0.0.54</strong> &nbsp; ( 01.11.2007 ) - <strong>phpBB 3.0-RC8</strong> güncellemesi</li>
+					<li><strong>0.0.51</strong> &nbsp; ( 15.09.2007 ) - <strong>phpBB 3.0-RC7</strong> güncellemesi</li>
+					<li><strong>0.0.50</strong> &nbsp; ( 13.09.2007 ) - <strong>phpBB 3.0-RC6</strong> güncellemesi</li>
+					<li><strong>0.0.46</strong> &nbsp; ( 28.08.2007 ) - <strong>phpBB 3.0-RC5</strong> güncellemesi</li>
+					<li><strong>0.0.44</strong> &nbsp; ( 28.07.2007 ) - <strong>phpBB 3.0-RC4</strong> güncellemesi</li>
+					<li><strong>0.0.41</strong> &nbsp; ( 08.07.2007 ) - <strong>phpBB 3.0-RC3</strong> güncellemesi</li>
+					<li><strong>0.0.40</strong> &nbsp; ( 25.06.2007 ) - <strong>phpBB 3.0-RC2</strong> güncellemes</li>
+					<li><strong>0.0.38</strong> &nbsp; ( 26.04.2007 ) - <strong>phpBB 3.0-RC1</strong> güncellemesi</li>
+					<li><strong>0.0.23</strong> &nbsp; ( 30.01.2006 ) - <strong>phpBB 3.0-B5</strong> güncellemesi</li>
+					<li><strong>0.0.16</strong> &nbsp; ( 29.11.2006 ) - <strong>phpBB 3.0-B4</strong> güncellemesi</li>
+					<li><strong>0.0.14</strong> &nbsp; ( 12.11.2006 ) - <strong>phpBB 3.0-B3</strong> güncellemesi</li>
+					<li><strong>0.0.1</strong> &nbsp; &nbsp; ( 21.09.2006 ) - <strong>phpBB 3.0-B2</strong> güncellemesi</li>
+					<li><strong>0.0.0</strong> &nbsp; &nbsp; ( 19.06.2006 ) - <strong>phpBB 3.0-B1</strong> güncellemesi</li>
 
 					<!--
 					<li>
