phpBB 3.0.9.RC2 güncellemeleri

--- a/phpbb3.lang_turkish.guide.html
+++ b/phpbb3.lang_turkish.guide.html
@@ -58,7 +58,7 @@ function selectCode(a) {
 				<tr>
 					<td style="padding-left:10px;"><strong>Sürüm</strong></td>
 					<td>&nbsp;:&nbsp;</td>
-					<td>1.0.6 &nbsp; 28 Haziran 2011 &nbsp; ( phpBB 3.0.9.RC1 ) &nbsp; Unicode (UTF-8)</td>
+					<td>1.0.7 &nbsp; 28 Haziran 2011 &nbsp; ( phpBB 3.0.9.RC2 ) &nbsp; Unicode (UTF-8)</td>
 				</tr>
 				<tr>
 					<td style="padding-left:10px;" valign="top"><strong>Tercüme &amp; Telif</strong></td>
@@ -269,6 +269,7 @@ function selectCode(a) {
 			<p>Sürüm geçmişinin aşırı yer kaplamaması için bazı ara sürümler ve atlanmış, sadece son kullanıcıya sunulan ana dağıtımlara yer verilmiştir.</p> 
 			<p>
 				<ul type="square">
+					<li><strong>1.0.7</strong> &nbsp; &nbsp; ( 28.16.2011 ) - <strong>phpBB 3.0.9.RC2</strong> güncellemesi</li>
 					<li><strong>1.0.6</strong> &nbsp; &nbsp; ( 28.16.2011 ) - <strong>phpBB 3.0.9.RC1</strong> güncellemesi</li>
 					<li><strong>1.0.5</strong> &nbsp; &nbsp; ( 21.11.2010 ) - <strong>phpBB 3.0.8</strong> güncellemesi</li>
 					<li><strong>1.0.4</strong> &nbsp; &nbsp; ( 06.03.2010 ) - <strong>phpBB 3.0.7-PL1</strong> güncellemesi, 3.0.7 ile fark yok</li>
