geliştirmeler, değişiklik ve güncellemeler

--- a/phpbb3.lang_turkish.guide.html
+++ b/phpbb3.lang_turkish.guide.html
@@ -8,27 +8,8 @@
 <meta name="keywords" content="phpbb, phpbb3, türkçe, dil dosyası, phpBB3 Türkçe Dil Dosyası, phpBB3 Türkçe Dil Paketi, phpBB Türkiye" />
 <title>phpBB Türkiye - phpBB3 Türkçe Dil Dosyası - yükleme ve kullanım kılavuzu</title>
 <style type="text/css" media="screen">
-* html table,* html td,* html{font-size:100%}html{font-size:100%;height:100%}body{font:normal 12px/1.6em Verdana, Helvetica, Arial, sans-serif;color:#222;background:#dbd7d1;margin:0}#wrapper{width:770px;background:#fff;border-left:1px solid #6e7a83;border-right:1px solid #6e7a83;margin:0 auto;padding:15px}h1{font-size:20px;background-color:#828d97;border-bottom:1px solid #dbd7d1;color:#fff;margin:-15px -15px 0;padding:24px}h2{color:#d21a4e;font-size:15px}h3{font-size:14px;background-color:#e1e3e7;color:#666;border-top:1px solid #fff;border-bottom:2px solid #8c99a3;margin:0;padding:5px 15px}h4,p{padding-left:10px;font-size:12px}p,ul,li{line-height:1.4em}.note{background:#ebeadd;border-top:2px solid #8c99a3;margin:20px 0;padding:10px}a:link,a:active,a:visited{color:#368AD2;border-bottom-color:#368ad2}a:hover{background-color:#ecf3f7;color:#0d4473}small,.small{font-size:10px;font-family:Arial, Helvetica, sans-serif}.dir{color:#006400}.file{color:#bc280e}.greentext{color:#287302;background:inherit}.redtext{color:#d21a4e;background:inherit}hr{border:0 none;background-color:#6e7a83;height:1px}dl.codebox{border:1px solid #d8d8d8;font-size:1em;background-color:#fff;border-color:#c9d2d8;margin:0 0 0 10px;padding:3px}dl.codebox dt{text-transform:uppercase;border-bottom:1px solid #ccc;margin-bottom:3px;font-size:.8em;font-weight:700;display:block;border-bottom-color:#ccc;padding:0 0 0 5px}dl.codebox code{overflow:auto;display:block;height:auto;max-height:200px;white-space:normal;font:.9em Monaco, "Andale Mono","Courier New", Courier, mono;line-height:1.3em;color:#2e8b57;margin:2px 0 0 -36px;padding:2px 0}
+* html table,* html td,* html{font-size:100%}html{font-size:100%;height:100%}body{font: 13px/1.4 "Segoe UI", "Lucida Grande", "Lucida Sans Unicode", "trebuchet ms", verdana, arial, sans-serif;color:#222;background:#dbd7d1;margin:0}#wrapper{width:860px;background:#fff;border-left:1px solid #6e7a83;border-right:1px solid #6e7a83;margin:0 auto;padding:15px}h1{font-size:20px;background-color:#828d97;border-bottom:1px solid #dbd7d1;color:#fff;margin:-15px -15px 0;padding:24px}h2{color:#d21a4e;font-size:15px}h3{font-size:14px;background-color:#e1e3e7;color:#444;border-top:1px solid #fff;border-bottom:2px solid #8c99a3;margin:0;padding:5px 15px}h4,p{padding-left:10px;font-size:13px}p,ul,li{line-height:1.4em}.note{background:#ecd4d4;border-top:2px solid #8c99a3;margin:20px 0;padding:5px 10px}a:link,a:active,a:visited{color:#2a78ba;border-bottom-color:#2a78ba}a:hover{background-color:#ecf3f7;color:#0d4473}small,.small{font-size:11px;}.dir{color:#006400}.file{color:#bc280e}.greentext{color:#226102;background:inherit}.redtext{color:#b81515;background:inherit}hr{border:0 none;background-color:#6e7a83;height:1px}dl.codebox{border:1px solid #d8d8d8;font-size:1em;background-color:#fff;border-color:#c9d2d8;margin:0 0 0 10px;padding:3px}dl.codebox dt{text-transform:uppercase;border-bottom:1px solid #ccc;margin-bottom:3px;font-size:.8em;font-weight:700;display:block;border-bottom-color:#ccc;padding:0 0 0 5px}dl.codebox code{overflow:auto;display:block;height:auto;max-height:200px;white-space:normal;font:.9em Monaco, "Andale Mono","Courier New", Courier, mono;line-height:1.3em;color:#2e8b57;margin:2px 0 0 -36px;padding:2px 0}ul.ayrik li{margin-bottom:10px;}
 </style>
-<script type="text/javascript">
-// <![CDATA[
-function selectCode(a) {
-	// Get ID of code block
-	var e = a.parentNode.parentNode.getElementsByTagName('CODE')[0];
-	if (document.selection) {
-		var r = document.body.createTextRange();
-		r.moveToElementText(e);
-		r.select();
-	} else {
-		var s = window.getSelection();
-		var r = document.createRange();
-		r.setStartBefore(e);
-		r.setEndAfter(e);
-		s.addRange(r);
-	}
-}
-// ]]>
-</script>
 </head>
 <body>
 
@@ -79,44 +60,41 @@ function selectCode(a) {
 
 			<!-- [+] paket hakkında //-->
 			<h3>Dil dosyası hakkında</h3>
-			<p>
-				<table border="0" cellspacing="0" cellpadding="0">
-				<tr>
-					<td valign="top">
-						<h4>phpBB3 Türkçe dil dosyası genel içeriği</h4>
-						<p>
-							<ul type="square" class="ul2">
-								<li>phpBB3 Türkçe dil dosyaları &nbsp; <small>( <a href="http://www.phpbbturkiye.net/phpbb3-turkce-dil-dosyasi-f84/phpbb3-turkce-dil-dosyasi-t72.html" target="_blank">bilgi</a> )</small></li>
-								<li>Kurulum lisansı "Türkçe GPL lisans metni"</li>				
-							</ul>
-						</p>
-					</td>
-					<td width="15"></td>
-					<td valign="top">
-						<h4>phpBB3 Türkçe dil dosyası grafik içeriği</h4>
-						<p>
-							<ul type="square" class="ul2">
-								<li>prosilver Türkçe butonlar &nbsp; <small>( <a href="http://www.phpbbturkiye.net/phpbb-grafik-f60/prosilver-turkce-butonlar-t95.html" target="_blank">bilgi</a> )</small></li>
-								<li>subsilver2 Türkçe butonlar &nbsp; <small>( <a href="http://www.phpbbturkiye.net/phpbb-grafik-f60/subsilver2-turkce-butonlar-t32.html" target="_blank">bilgi</a> )</small></li>
-							</ul>
-						</p>
-					</td>
-				</tr>
-				</table>
-			</p>
+			
+			<table border="0" cellspacing="0" cellpadding="0">
+			<tr>
+				<td valign="top">
+					<h4>phpBB3 Türkçe dil dosyası genel içeriği</h4>
+					<p>
+						<ul type="square" class="ul2">
+							<li>phpBB3 Türkçe dil dosyaları &nbsp; <small>( <a href="http://www.phpbbturkiye.net/phpbb3-turkce-dil-dosyasi-f84/phpbb3-turkce-dil-dosyasi-t72.html" target="_blank">bilgi</a> )</small></li>
+							<li>Kurulum lisansı "Türkçe GPL lisans metni"</li>				
+						</ul>
+					</p>
+				</td>
+				<td width="15"></td>
+				<td valign="top">
+					<h4>phpBB3 Türkçe dil dosyası grafik içeriği</h4>
+					<p>
+						<ul type="square" class="ul2">
+							<li>prosilver Türkçe butonlar &nbsp; <small>( <a href="http://www.phpbbturkiye.net/phpbb-grafik-f60/prosilver-turkce-butonlar-t95.html" target="_blank">bilgi</a> )</small></li>
+							<li>subsilver2 Türkçe butonlar &nbsp; <small>( <a href="http://www.phpbbturkiye.net/phpbb-grafik-f60/subsilver2-turkce-butonlar-t32.html" target="_blank">bilgi</a> )</small></li>
+						</ul>
+					</p>
+				</td>
+			</tr>
+			</table>
+			
 			
 			<h4>Paket hakkında</h4>	
-			<p>
-				<ul type="square">
-					<li>Bu paket; phpBB ve işlevselliği konusunda tecrübeli bir oluşum olan <a href="http://www.phpbbturkiye.net" title="phpBB3 Türkçe destek ve geliştirme sitesi" target="_blank">phpBB Türkiye</a> grubu tarafından phpBB3 için tercüme edilen ve geliştirilen, yüksek kalite ve işlevsellik amaçlanan ve standart olarak UTF-8 formatında olan "<strong><a href="http://www.phpbbturkiye.net/phpbb3-turkce-dil-dosyasi-f84/" target="_blank">phpBB3 Türkçe Dil Dosyası</a></strong>" 'dır.</li>
-					<br />
-					<li>Tercümede; görünüm, işlev, uyumluluk gibi bazı kriterlere göre sözlük tercümesinden farklı, daha uygun kelime ve cümleler kullanılmış, bazı kelimeler üzerinde günlerce tartışılmış, anlamı tamamlayıcı değişiklikler yapılmıştır.</li>
-					<br />
-					<li>Dosyalar, yeni phpBB3 sürümlerine, yamalara, hata ve geri bildirimlere göre sürekli güncellenmektedir.</li>
-					<br />
-					<li>phpBB3 Türkçe Dil Dosyası'nın son güncel sürümünü <a href="http://www.phpbbturkiye.net" title="phpBB3 Türkçe destek ve geliştirme sitesi" target="_blank">phpBB Türkiye</a> sitemizin <a href="http://www.phpbbturkiye.net/phpbb3-turkce-dil-dosyasi-f84/" target="_blank">phpBB3 Türkçe Dil Dosyası</a> forumudan, eğer yüklediyseniz "<a href="http://www.phpbbturkiye.net/phpbb3-turkce-dil-dosyasi-f84/dil-dosyasi-surum-denetimi-modulu-t14.html" target="_blank">Dil dosyası sürüm denetimi</a>" modülünden kontrol edebilirsiniz.</li>
-				</ul>
-			</p>
+			
+			<ul type="square" class="ayrik">
+				<li>Bu paket; phpBB ve işlevselliği konusunda tecrübeli bir oluşum olan <a href="http://www.phpbbturkiye.net" title="phpBB3 Türkçe destek ve geliştirme sitesi" target="_blank">phpBB Türkiye</a> grubu tarafından phpBB3 için tercüme edilen ve geliştirilen, yüksek kalite ve işlevsellik amaçlanan ve standart olarak UTF-8 formatında olan "<strong><a href="http://www.phpbbturkiye.net/phpbb3-turkce-dil-dosyasi-f84/" target="_blank">phpBB3 Türkçe Dil Dosyası</a></strong>" 'dır.</li>
+				<li>Tercümede; görünüm, işlev, uyumluluk gibi bazı kriterlere göre sözlük tercümesinden farklı, daha uygun kelime ve cümleler kullanılmış, bazı kelimeler üzerinde günlerce tartışılmış, anlamı tamamlayıcı değişiklikler yapılmıştır.</li>
+				<li>Dosyalar, yeni phpBB3 sürümlerine, yamalara, hata ve geri bildirimlere göre sürekli güncellenmektedir.</li>
+				<li>phpBB3 Türkçe Dil Dosyası'nın son güncel sürümünü <a href="http://www.phpbbturkiye.net" title="phpBB3 Türkçe destek ve geliştirme sitesi" target="_blank">phpBB Türkiye</a> sitemizin <a href="http://www.phpbbturkiye.net/phpbb3-turkce-dil-dosyasi-f84/" target="_blank">phpBB3 Türkçe Dil Dosyası</a> forumudan, eğer yüklediyseniz "<a href="http://www.phpbbturkiye.net/phpbb3-turkce-dil-dosyasi-f84/dil-dosyasi-surum-denetimi-modulu-t14.html" target="_blank">Dil dosyası sürüm denetimi</a>" modülünden kontrol edebilirsiniz.</li>
+			</ul>
+			
 			<!-- [-] paket hakkında //-->
 
 			<!-- =============================================================================================== -->
@@ -127,26 +105,22 @@ function selectCode(a) {
 			<p>"<strong>phpBB Türkiye</strong>" grubu tarafından tercümesi yapılan, geliştirilen ve dağıtıma sunulan bu dil dosyasını kullanabilmek için <a href="http://www.phpbbturkiye.net/sayfa-gpl-lisansi.html" target="_blank" rel="nofollow">GPL</a> lisansınında da yer alan koşullara ve özellikle aşağıdaki koşullara uymanız gerekmektedir. Dil dosyasını herhangi bir şekilde kullanmanız bu koşulları kabul ettiğiniz anlamına gelir.<br />
 
 			<h4>1. Kullanım ve değişiklik yapma ile ilgili koşullar</h4>
-			<ul type="square">
+			<ul type="square" class="ayrik">
 				<li>Bizim telif bilgilerimizi silemez, kaldıramaz, müdahale edemezsiniz.</li>
-				<br />
 				<li>Kullandığınız temada tercüme telif kodu silinmiş ise, <span class="file">overall_footer.html</span> 
-				dosyasına şu kodu eklemelisini: <strong>{TRANSLATION_INFO}</strong></li>
-				<br />
+				dosyasına şu kodu eklemelisiniz: <strong>{TRANSLATION_INFO}</strong></li>
 				<li>Telif bilgileri dışında istediğiniz değişiklik ve eklemeleri yapabilirsiniz. Ancak bunları sadece kendi sitenizde kullanabilir, dağıtamazsınız.</li>
 			</ul>
 
 			<h4>2. Bulundurma ile ilgili koşullar</h4>
-			<ul type="square">
+			<ul type="square" class="ayrik">
 				<li>Tarafımızdan, e-posta yolu ile izin verilmediği sürece "phpBB3 Türkçe Dil Dosyası" 'nın dağıtımı herhangi bir siteden/alandan yapılamaz.</li>
-				<br />
 				<li>Taban olarak tarafımızca yapılan dil dosyalarını kullanarak oluşturabileceğiniz dil dosyalarını e-posta yolu ile izin verilmediği sürece yayınlayamaz, sadece kendiniz için kullanabilirsiniz.</li>
 			</ul>
 
 			<h4>3. Gelişmiş phpBB/premod yazarlarına</h4>
-			<ul type="square">
+			<ul type="square" class="ayrik">
 				<li>E-posta yolu ile izin verilmediği sürece, gelişmiş phpBB sistemlerinde telif bilgilerimize müdahale edemezsiniz.</li>
-				<br />
 				<li>Bu kılavuzu phpBB sisteminiz ile beraber dağıtarak, kullanıcıları "<strong>kullanım &amp; bulundurma koşulları</strong>"ndan haberdar etmelisiniz.</li>
 			</ul>
 			</p>
@@ -198,20 +172,15 @@ function selectCode(a) {
 			<!-- [+] geliştirme //-->
 			<h3>Geliştirme, hata bildirme</h3>
 
-			<!--
-			<h4>SVN sistemi</h4>
-			<p>Tercüme projesinde kullanılan SVN sisteminden, dil dosyalarında yapılan değişiklikleri takip edebilir, değişikliklerin e-posta adresinize gelmesini sağlayabilir, henüz sürüm olarak yayınlanmamış güncel dosyaları kendi bilgisayarınıza indirebilirsiniz.</p>
+			<!---->
+			<h4>GIT sürümlendirme sistemi</h4>
+			<p>Tercüme projesinde kullanılan ve github üzerinde olan git sürümlendirme sisteminden, dil dosyalarında yapılan değişiklikleri anlık takip edebilir, henüz yayınlanmamış güncel sürümü ve önceden etiketlenen tüm sürümleri kendi bilgisayarınıza indirebilir, hata bildirimlerinde bulunabilirsiniz.</p>
 			<ul type="square">
-				<li><a href="https://sourceforge.net/svn/?group_id=189800" target="_blank">SVN alanımıza bağlantı bilgileri</a></li>
-				<li><a href="http://phpbbturkiye.svn.sourceforge.net/viewvc/phpbbturkiye/phpbb3.lang_turkish/" target="_blank">Web tabanlı SVN deposu izleyicisi</a></li>
+				<li><a href="https://github.com/angelside/phpBB3.Turkce.Dil.Dosyasi" target="_blank">Github üzerindeki phpBB3 Türkçe dil dosyası</a></li>
 			</ul>
 
-			<h4>SVN sistemi - e-posta listesi</h4>
-			<p><a href="https://lists.sourceforge.net/lists/listinfo/phpbbturkiye-update" target="_blank">E-posta listesi</a> sayesinde, yapılan tüm değişiklikler liste üyelerinin e-posta adreslerine gönderilir. Ayrıca listeye eklenen tüm iletiler bir de <a href="http://sourceforge.net/mailarchive/forum.php?forum=phpbbturkiye-update" target="_blank">arşiv</a> alanında tutulur. Değişiklikleri izlemek isteyenler, e-posta listesi'ne kayıt olabilir.</p>
-			-->
-			
 			<h4>Hata ve geri bildirim</h4>
-			<p>Gözden kaçan hataları, yanlış olduğunu düşündüğünüz tercüme ve ifadeleri, tüm önerileri ve yorumlarınızı "<a href="http://www.phpbbturkiye.net" title="phpBB3 Türkçe destek ve geliştirme sitesi" target="_blank">phpBB Türkiye</a>" sitemizdeki <a href="http://www.phpbbturkiye.net/phpbb3-turkce-dil-dosyasi-f84/" target="_blank">phpBB3 Türkçe Dosyası</a> forumuna bildirebilirsiniz.</p>
+			<p>Gözden kaçan hataları, yanlış olduğunu düşündüğünüz tercüme ve ifadeleri, tüm önerileri ve yorumlarınızı "<a href="http://www.phpbbturkiye.net" title="phpBB3 Türkçe destek ve geliştirme sitesi" target="_blank">phpBB Türkiye</a>" sitemizdeki <a href="http://www.phpbbturkiye.net/phpbb3-turkce-dil-dosyasi-f84/" target="_blank">phpBB3 Türkçe Dosyası</a> forumuna, veya İngilizce arayüze sahip olan github üzerindeki projemizin <a href="https://github.com/angelside/phpBB3.Turkce.Dil.Dosyasi/issues" target="_blank">issues</a> alanına gönderebilirsiniz..</p>
 			<!-- [-] geliştirme //-->
 
 			<!-- =============================================================================================== -->
@@ -340,11 +309,9 @@ function selectCode(a) {
 			</div>
 
 		</div>
-
 	</td>
 </tr>
 </table>
-
 
 </body>
 </html>
