phpBB 3.0.10, eksik tercüme yok

--- a/phpbb3.lang_turkish.guide.html
+++ b/phpbb3.lang_turkish.guide.html
@@ -39,7 +39,7 @@
 				<tr>
 					<td style="padding-left:10px;"><strong>Sürüm</strong></td>
 					<td>&nbsp;:&nbsp;</td>
-					<td>1.0.8 &nbsp; 11 Temmuz 2011 &nbsp; ( phpBB 3.0.9 ) &nbsp; Unicode (UTF-8)</td>
+					<td>1.0.9 &nbsp; 04 Ocak 2012 &nbsp; ( phpBB 3.0.10 ) &nbsp; Unicode (UTF-8)</td>
 				</tr>
 				<tr>
 					<td style="padding-left:10px;" valign="top"><strong>Tercüme &amp; Telif</strong></td>
@@ -238,6 +238,7 @@
 			<p>Sürüm geçmişinin aşırı yer kaplamaması için bazı ara sürümler ve atlanmış, sadece son kullanıcıya sunulan ana dağıtımlara yer verilmiştir.</p> 
 			<p>
 				<ul type="square">
+					<li><strong>1.0.9</strong> &nbsp; &nbsp; ( 04.01.2012 ) - <strong>phpBB 3.0.10</strong> güncellemesi</li>
 					<li><strong>1.0.8</strong> &nbsp; &nbsp; ( 11.07.2011 ) - <strong>phpBB 3.0.9</strong> güncellemesi (3.0.9-RC3 ve 3.0.9-RC4 ile aynı)</li>
 					<li><strong>1.0.8</strong> &nbsp; &nbsp; ( 28.16.2011 ) - <strong>phpBB 3.0.9.RC4</strong> güncellemesi (3.0.9-RC3 ile aynı)</li>
 					<li><strong>1.0.8</strong> &nbsp; &nbsp; ( 28.16.2011 ) - <strong>phpBB 3.0.9.RC3</strong> güncellemesi</li>
